<resources>

    <string name="senior_name">高级模块</string>
    <string name="senior_title">高级</string>

    <string name="senior_tab3_btn1">事件分发演示</string>
    <string name="senior_tab3_btn2">自定义View演示</string>
    <string name="senior_tab3_btn3">夜间模式演示</string>
    <string name="senior_tab3_btn4">动画演示</string>

    <string name="senior_touch_title">事件分发</string>
    <string name="senior_touch_btn1">默认事件传递流程</string>
    <string name="senior_touch_btn2">事件取消</string>
    <string name="senior_touch_btn3">事件拦截</string>

    <string name="senior_touch_cancel_title">TouchCancel</string>
    <string name="senior_touch_cancel_btn">测试取消事件</string>

    <string name="senior_touch_default_title">TouchDefault</string>
    <string name="senior_touch_intercept_title">TouchIntercept</string>

    <string name="senior_view_title">自定义View</string>
    <string name="senior_view_btn1">绘制基本图形</string>
    <string name="senior_view_btn2">画布操作</string>
    <string name="senior_view_btn3">绘制图片和文字</string>
    <string name="senior_view_btn4">Path基本操作</string>
    <string name="senior_view_btn5">自定义雷达图</string>
    <string name="senior_view_btn6">View测试</string>

    <string name="senior_view_base_title">绘制基本图形</string>
    <string name="senior_view_base_btn1">画一个点</string>
    <string name="senior_view_base_btn2">画多个点</string>
    <string name="senior_view_base_btn3">画一条直线</string>
    <string name="senior_view_base_btn4">画多条直线</string>
    <string name="senior_view_base_btn5">画矩形</string>
    <string name="senior_view_base_btn6">画圆角矩形</string>
    <string name="senior_view_base_btn7">画椭圆</string>
    <string name="senior_view_base_btn8">画圆</string>
    <string name="senior_view_base_btn9">画圆弧</string>

    <string name="senior_view_canvas_title">画布操作</string>
    <string name="senior_view_canvas_btn1">平移</string>
    <string name="senior_view_canvas_btn2">缩放</string>
    <string name="senior_view_canvas_btn3">旋转</string>

    <string name="senior_view_path_title">Path操作</string>
    <string name="senior_view_path_btn1">基本操作1</string>
    <string name="senior_view_path_btn2">基本操作2</string>
    <string name="senior_view_path_btn3">基本操作3</string>
    <string name="senior_view_path_btn4">基本操作4</string>

    <string name="senior_view_picture_title">图片文字</string>
    <string name="senior_view_picture_btn1">矢量图</string>
    <string name="senior_view_picture_btn2">位图</string>
    <string name="senior_view_picture_btn3">文字</string>
    <string name="senior_view_radar_title">雷达图</string>
    <string name="senior_view_custom_title">测试View</string>

    <string name="senior_theme_title">夜间模式</string>
    <string name="senior_theme_btn">切换模式</string>

    <string name="senior_animation_title">动画</string>
    <string name="senior_animation_btn1">属性动画(ObjectAnimator)</string>
    <string name="senior_animation_btn2"> 属性动画(ValueAnimator)</string>
    <string name="senior_animation_btn3">组合动画</string>
    <string name="senior_animation_btn4">动画XML写法</string>
    <string name="senior_animation_btn5"> 动画插值器 </string>

    <string name="senior_animator_object_title">ObjectAnimator</string>
    <string name="senior_animator_object_btn1">旋转</string>
    <string name="senior_animator_object_btn2">组合</string>

    <string name="senior_animator_value_title">ValueAnimator</string>
    <string name="senior_animator_value_btn1">垂直</string>
    <string name="senior_animator_value_btn2">组合(抛物线)</string>

    <string name="senior_animator_set_title">AnimatorSet</string>
    <string name="senior_animator_set_btn1">组合(Together)</string>
    <string name="senior_animator_set_btn2">组合(After)</string>

    <string name="senior_animator_xml_title">AnimatorXML</string>
    <string name="senior_animator_xml_btn1">沿x轴放大</string>
    <string name="senior_animator_xml_btn2">沿x,y轴一起放大</string>

    <string name="senior_animator_interpolator_title">Interpolator</string>

    <string name="cabin1">豪华舱</string>
    <string name="cabin2">公务舱</string>
    <string name="cabin3">经济舱</string>

</resources>