<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.hjc.library_widget.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/senior_color"
            app:leftImage="@mipmap/widget_icon_back"
            app:titleColor="@color/base_white"
            app:titleText="@string/senior_view_path_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.hjc.module_senior.widget.view.MyCustom4View
                android:id="@+id/custom_view"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{onClickListener}"
                        android:text="@string/senior_view_path_btn1"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{onClickListener}"
                        android:text="@string/senior_view_path_btn2"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{onClickListener}"
                        android:text="@string/senior_view_path_btn3"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{onClickListener}"
                        android:text="@string/senior_view_path_btn4"
                        android:textAllCaps="false" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </LinearLayout>

</layout>